header and nav bar partials

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,10 +5,10 @@
 @use "./partials/typography";
 
 // Nav
-// @use "./partials/nav";
+@use "./partials/nav";
 
 // Header
-// @use "./partials/header";
+@use "./partials/header";
 
 // About
 // @use "./partials/about";
