media Q partial and linked scss sections to style sheet

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -11,16 +11,16 @@
 @use "./partials/header";
 
 // About
-// @use "./partials/about";
+@use "./partials/about";
 
 // skills
-// @use "./partials/skills";
+@use "./partials/skills";
 
 // projects
-// @use "./partials/projects";
+@use "./partials/projects";
 
 // Contact 
-// @use "./partials/contact";
+@use "./partials/contact";
 
 
 
