--- a/styles/styles.css
+++ b/styles/styles.css
@@ -347,3 +347,223 @@ header {
   padding: 10rem 5rem;
   text-shadow: -2px 0px 10px white;
 }
+
+.flexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.aboutImage {
+  border-radius: 50%;
+  max-width: 75%;
+  border: 1px solid black;
+  padding: 1rem;
+  display: inline-block;
+}
+
+.aboutSummary {
+  width: 60%;
+}
+
+.imgContainer {
+  width: 35%;
+  text-align: center;
+}
+
+.skills {
+  background-image: url("../assets/background1.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.skillsSection {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+i {
+  display: block;
+  font-size: 6rem;
+  margin-bottom: 1rem;
+}
+
+.skillsList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 50%;
+}
+.skillsList li {
+  width: 25%;
+  padding: 2rem;
+}
+
+.skillsContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.project {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5rem;
+}
+
+.project2 {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.projectStack {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 2rem 0;
+}
+.projectStack li {
+  padding: 1rem;
+  margin-right: 1rem;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+
+.projectDescription {
+  width: 45%;
+}
+.projectDescription .projectLinks a {
+  display: inline-block;
+  font-weight: 600;
+  margin: 1.5rem 3rem 0 0;
+}
+
+.projectImage {
+  width: 50%;
+  background-color: rgba(212, 219, 221, 0.5);
+}
+
+.project1 {
+  padding: 3rem;
+}
+
+.project3 {
+  padding: 3rem;
+}
+
+.project2 {
+  padding: 3rem;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contactUL {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.contactUL li {
+  padding: 3rem 3rem 0 0;
+}
+.contactUL li i {
+  font-size: 4.5rem;
+}
+
+.contactText {
+  width: 50%;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+}
+
+.contactForm {
+  width: 45%;
+}
+
+input {
+  width: 45%;
+  padding: 1rem 1.5rem;
+  border-radius: 1.2rem;
+  border: 1.5px solid black;
+}
+
+.formFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.submit {
+  width: 50%;
+  -ms-flex-item-align: center;
+      align-self: center;
+  background-color: aliceblue;
+  border: 1.2px solid black;
+  border-radius: 1.2rem;
+  padding: 1rem 1.2rem;
+}
+
+textarea {
+  padding: 2rem;
+  border-radius: 1.5rem;
+  border: 1.5px solid black;
+  resize: none;
+}
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  text-transform: uppercase;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  text-transform: uppercase;
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  text-transform: uppercase;
+}
+
+input::-ms-input-placeholder, textarea::-ms-input-placeholder {
+  text-transform: uppercase;
+}
+
+input::placeholder,
+textarea::placeholder,
+button {
+  text-transform: uppercase;
+}
