added page animations

--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -10,6 +10,10 @@
   display: flex; 
   li {
     padding: 3rem 3rem 0 0;
+    &:hover,
+    &:focus {
+      transform: scale(1.2);
+    }
     i {
       font-size: 4.5rem;
     }
@@ -50,6 +54,10 @@ input {
   border: 1.2px solid black;
   border-radius: 1.2rem;
   padding: 1rem 1.2rem;
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
 
 }
 
