--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -16,7 +16,7 @@ header {
 
 .headerContainer {
   // text-align: center;
-  // margin-top: 2vh;
+  padding-top: 2rem;
   opacity: 1;
   h2 {
     text-align: center;
