--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -15,7 +15,7 @@
   padding: 2rem 0;
 
   li {
-    padding: 1rem;
+    padding: 0.5rem 1rem;
     margin-right: 1rem;
     border: 1px solid black;
     border-radius: 0.5rem;
@@ -34,6 +34,7 @@ width: 45%;
 .projectImage {
   width: 50%;
   background-color: rgba(212, 219, 221, 0.5);
+  // background-color: rgba(227, 190, 159, 0.4);
 
 
 }
