--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -10,14 +10,14 @@ nav {
 
   ul {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 
 
     li {
       padding: 2rem;
       // text-shadow: -2px 0px 8px white;
       text-transform: uppercase;
-      // font-weight: 600;
+      font-weight: 600;
       &:hover,
       &:focus {
         transform: scale(1.2);
