--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -11,11 +11,14 @@ header {
   // background-size: contain;
   // background-position: center;
   // opacity: 0.8;
+  background: url(../assets/stars.png);
+  background-size: contain;
+  background-color: rgba(233, 200, 174, 0.1);
 }
 
 
 .headerContainer {
-  // text-align: center;
+  text-align: center;
   padding-top: 2rem;
   opacity: 1;
   h2 {
@@ -26,7 +29,7 @@ header {
 }
 
 .headerText {
-  margin-top: 8rem;
+  margin-top: 15rem;
   // background-color: rgba(255, 255, 255, 0.65);
   padding: 10rem 5rem;
   text-shadow: -2px 0px 10px white;
