--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,14 +294,14 @@ h3, h4, .skills li, .projectLinks, .projectStack li {
 }
 
 h1 {
-  font-size: 10rem;
-  margin-bottom: 3rem;
+  font-size: 8rem;
+  margin-bottom: 2rem;
   font-family: "Handlee", cursive;
   line-height: 8rem;
 }
 
 h2 {
-  font-size: 4.5rem;
+  font-size: 3rem;
   line-height: 5.5rem;
 }
 
@@ -322,13 +322,14 @@ nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 nav ul li {
   padding: 2rem;
   text-transform: uppercase;
+  font-weight: 600;
 }
 nav ul li:hover, nav ul li:focus {
   -webkit-transform: scale(1.2);
@@ -337,9 +338,13 @@ nav ul li:hover, nav ul li:focus {
 
 header {
   min-height: 100vh;
+  background: url(../assets/stars.png);
+  background-size: contain;
+  background-color: rgba(233, 200, 174, 0.1);
 }
 
 .headerContainer {
+  text-align: center;
   padding-top: 2rem;
   opacity: 1;
 }
@@ -348,7 +353,7 @@ header {
 }
 
 .headerText {
-  margin-top: 8rem;
+  margin-top: 15rem;
   padding: 10rem 5rem;
   text-shadow: -2px 0px 10px white;
 }
@@ -583,4 +588,65 @@ input::placeholder,
 textarea::placeholder,
 button {
   text-transform: uppercase;
+}
+
+@media (max-width: 1200px) {
+  .aboutImage {
+    min-width: 90%;
+  }
+}
+@media (max-width: 1100px) {
+  .aboutSummary {
+    width: 55%;
+  }
+  .imgContainer {
+    width: 40%;
+    text-align: center;
+  }
+  .project {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .projectDescription {
+    width: 100%;
+    text-align: center;
+  }
+  .projectStack {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .projectImage {
+    width: 60%;
+  }
+}
+@media (max-width: 1000px) {
+  .skillsList {
+    width: 70%;
+  }
+}
+@media (max-width: 850px) {
+  .contact {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 3rem;
+  }
+  .contact h3 {
+    text-align: center;
+  }
+  .contactText,
+.contactForm {
+    width: 100%;
+  }
+  .contactUL {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  /* all of our styles for MOBILE devices will go within this breakpoint */
 }
