--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -57,8 +57,33 @@
   .contactUL {
     justify-content: center;
   }
+ 
+  .flexContainer {
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+  }
+
+  .aboutImage {
+    width: 50%;
+    margin-bottom: 1rem;
+  }
+
+  .aboutSummary {
+    width: 100%;
+  }
+
+  // .about h3 {
+  //   text-align: center;
+  // }
+
 }
 
-@media (max-width: 500px) {
-  /* all of our styles for MOBILE devices will go within this breakpoint */
+@media (max-width: 700px) {
+  .projectImage {
+    width: 80%;
+  }
+
+  .skillsList {
+    width: 90%;
+  }
 }
