--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -86,4 +86,15 @@
   .skillsList {
     width: 90%;
   }
+
+  .imgContainer {
+    width: 50%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .projectImage {
+    width: 100%;
+  }
 }
