--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -98,3 +98,18 @@
     width: 100%;
   }
 }
+
+@media (max-width: 500px) {
+  .skillsList li {
+    font-size: 1.4rem;
+  }
+
+  h3 {
+    font-size: 4.5rem;
+  }
+
+  nav {
+    font-size: 1.5rem;
+  }
+
+}
