--- a/styles/styles.css
+++ b/styles/styles.css
@@ -340,6 +340,7 @@ nav ul li:hover, nav ul li:focus {
 
 header {
   min-height: 100vh;
+  opacity: 0.8;
   background: url(../assets/stars.png);
   background-size: contain;
   background-color: rgba(233, 200, 174, 0.1);
@@ -355,7 +356,7 @@ header {
 }
 
 .headerText {
-  margin-top: 15rem;
+  margin-top: 10rem;
   padding: 10rem 5rem;
   text-shadow: -2px 0px 10px white;
 }
@@ -678,5 +679,16 @@ button {
 @media (max-width: 600px) {
   .projectImage {
     width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .skillsList li {
+    font-size: 1.4rem;
+  }
+  h3 {
+    font-size: 4.5rem;
+  }
+  nav {
+    font-size: 1.5rem;
   }
 }
