--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -106,10 +106,25 @@
 
   h3 {
     font-size: 4.5rem;
+    line-height: 5rem;
   }
 
   nav {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+  }
+
+ h1 {
+  font-size: 6rem;
+  line-height: 6.5rem;
+ }
+
+ h2 {
+  font-size: 2rem;
+  line-height: 3rem;
+ }
+
+  .contact {
+    text-align: center;
   }
 
 }
