--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -131,4 +131,13 @@
     color: black;
   }
 
+  .projectLinks {
+    font-size: 1.4rem;
+  }
+
+  .projectStack li {
+    font-size: 1.4rem;
+  }
+
+
 }
