changed header image and fonts

--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -41,6 +41,13 @@
   }
 }
 
+@media (max-width: 930px) {
+  h2 {
+    font-size: 3.8rem;
+  }
+
+}
+
 @media (max-width: 850px) {
   .contact {
     flex-wrap: wrap;
