--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,7 +1,7 @@
 @use "./variables" as v;
 
-header {
-  min-height: 100vh;
+// header {
+//   min-height: 100vh;
   // background: url("../assets/headerImagebg.png"), url("../assets/whitebk.jpeg");
   // background-repeat: no-repeat;
   // background-size: contain, cover;
@@ -10,29 +10,67 @@ header {
   // background-repeat: no-repeat;
   // background-size: contain;
   // background-position: center;
-  opacity: 0.8;
-  background: url(../assets/stars.png);
-  background-size: contain;
-  background-color: rgba(233, 200, 174, 0.1);
+//   opacity: 0.7;
+//   background: url(../assets/stars.png);
+//   background-size: contain;
+//   background-color: rgba(233, 200, 174, 0.1);
+// }
+
+
+// .headerContainer {
+//   text-align: center;
+//   padding-top: 2rem;
+//   opacity: 1;
+//   h2 {
+//     text-align: center;
+//   }
+
+
+// }
+
+// .headerText {
+//   margin-top: 10rem;
+//   // background-color: rgba(255, 255, 255, 0.65);
+//   padding: 10rem 5rem;
+//   text-shadow: -2px 0px 10px white;
+
+
+// }
+
+body{
+  height: 100%;
+  margin: 0;
+}
+div.wave{
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  z-index: 99;
 }
 
+.wave svg{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+}
 
-.headerContainer {
-  text-align: center;
-  padding-top: 2rem;
-  opacity: 1;
-  h2 {
+#container {
+    position: relative;
+    background: linear-gradient(90deg, hsla(328, 75%, 45%, 1) 0%, hsla(269, 85%, 41%, 1) 100%);
+    height: 90vh;
+    color: white;
     text-align: center;
-  }
-
-
-}
-
-.headerText {
-  margin-top: 10rem;
-  // background-color: rgba(255, 255, 255, 0.65);
-  padding: 10rem 5rem;
-  text-shadow: -2px 0px 10px white;
-
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 4rem;
 
 }
+
+h1 {
+  margin-top: 25vh;
+}
+
+
+
+
