--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -16,14 +16,17 @@ h3, h4, .skills li, .projectLinks, .projectStack li {
 }
 
 h1 {
-  font-size: 8rem;
+  font-size: 10rem;
   margin-bottom: 2rem;
-  font-family: v.$name;
+  font-family: v.$h1;
   line-height: 8rem;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
 }
 h2 {
-  font-size: 3rem;
+  font-size: 5rem;
   line-height: 5.5rem;
+  font-family: v.$h1;
 }
 
 h3 {
