--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -5,8 +5,7 @@ $white: rgb(242, 242, 240);
 $grey: rgba(111, 108, 100, 0.4);
 
 // Font families 
-$name: 'Handlee', cursive;
-$name2: 'Klee One', cursive;
 $body: 'Raleway', sans-serif;
+$h1: 'Questrial';
 
 // Base font size 
