--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,15 +294,18 @@ h3, h4, .skills li, .projectLinks, .projectStack li {
 }
 
 h1 {
-  font-size: 8rem;
+  font-size: 10rem;
   margin-bottom: 2rem;
-  font-family: "Handlee", cursive;
+  font-family: "Questrial";
   line-height: 8rem;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 5rem;
   line-height: 5.5rem;
+  font-family: "Questrial";
 }
 
 h3 {
@@ -331,34 +334,51 @@ nav ul {
 nav ul li {
   padding: 2rem;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: 400;
 }
 nav ul li:hover, nav ul li:focus {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
-header {
-  min-height: 100vh;
-  opacity: 0.8;
-  background: url(../assets/stars.png);
-  background-size: contain;
-  background-color: rgba(233, 200, 174, 0.1);
+body {
+  height: 100%;
+  margin: 0;
 }
 
-.headerContainer {
-  text-align: center;
-  padding-top: 2rem;
-  opacity: 1;
-}
-.headerContainer h2 {
-  text-align: center;
+div.wave {
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  z-index: 99;
 }
 
-.headerText {
-  margin-top: 10rem;
-  padding: 10rem 5rem;
-  text-shadow: -2px 0px 10px white;
+.wave svg {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+#container {
+  position: relative;
+  background: -webkit-gradient(linear, left top, right top, from(hsl(328deg, 75%, 45%)), to(hsl(269deg, 85%, 41%)));
+  background: linear-gradient(90deg, hsl(328deg, 75%, 45%) 0%, hsl(269deg, 85%, 41%) 100%);
+  height: 90vh;
+  color: white;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 4rem;
+}
+
+h1 {
+  margin-top: 25vh;
 }
 
 .flexContainer {
@@ -629,6 +649,11 @@ button {
 @media (max-width: 1000px) {
   .skillsList {
     width: 70%;
+  }
+}
+@media (max-width: 930px) {
+  h2 {
+    font-size: 3.8rem;
   }
 }
 @media (max-width: 850px) {
