--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,75 +1,22 @@
 @use "./variables" as v;
 
-// header {
-//   min-height: 100vh;
-  // background: url("../assets/headerImagebg.png"), url("../assets/whitebk.jpeg");
-  // background-repeat: no-repeat;
-  // background-size: contain, cover;
-  // background-position: left, right;
-  // background: url("../assets/space5.png");
-  // background-repeat: no-repeat;
-  // background-size: contain;
-  // background-position: center;
-//   opacity: 0.7;
-//   background: url(../assets/stars.png);
-//   background-size: contain;
-//   background-color: rgba(233, 200, 174, 0.1);
-// }
 
-
-// .headerContainer {
-//   text-align: center;
-//   padding-top: 2rem;
-//   opacity: 1;
-//   h2 {
-//     text-align: center;
-//   }
-
-
-// }
-
-// .headerText {
-//   margin-top: 10rem;
-//   // background-color: rgba(255, 255, 255, 0.65);
-//   padding: 10rem 5rem;
-//   text-shadow: -2px 0px 10px white;
-
-
-// }
-
-body{
-  height: 100%;
-  margin: 0;
-}
-div.wave{
-  width: 100%;
-  bottom: 0;
-  position: absolute;
-  z-index: 99;
-}
-
-.wave svg{
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-}
-
-#container {
-    position: relative;
-    background: linear-gradient(90deg, hsla(328, 75%, 45%, 1) 0%, hsla(269, 85%, 41%, 1) 100%);
-    height: 90vh;
+header {
+    background: url(../../../assets/a6Wave-9.1s-1561px.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    // background-position: center;
+    height: 100vh;
     color: white;
-    text-align: center;
     display: flex;
     flex-direction: column;
-    margin-bottom: 4rem;
+    justify-content: center;
 
 }
 
-h1 {
-  margin-top: 25vh;
-}
+
+
+
 
 
 
