--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -5,6 +5,11 @@ nav {
   // top: 2.5rem;
   // right: 5rem;
   // background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 5%;
+  right: 5%;
+
+
 
 
 
