updated content in projects, contact, and backgrounds in skills section

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -35,6 +35,9 @@ width: 45%;
   width: 50%;
   background-color: rgba(212, 219, 221, 0.5);
   // background-color: rgba(227, 190, 159, 0.4);
+  img {
+    min-width: 110%;
+  }
 
 
 }
