--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -3,6 +3,7 @@
 .contact {
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
   
 }
 
@@ -13,6 +14,7 @@
     &:hover,
     &:focus {
       transform: scale(1.2);
+      transition: 1s;
     }
     i {
       font-size: 4.5rem;
@@ -32,14 +34,15 @@ form {
 }
 
 .contactForm {
-  width: 45%;
+  width: 50%;
 }
 
 input {
   width: 45%;
   padding: 1rem 1.5rem;
-  border-radius: 1.2rem;
-  border: 1.5px solid black;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1.2px solid black;
 }
 
 .formFlex {
@@ -48,22 +51,26 @@ input {
 }
 
 .submit {
-  width: 50%;
+  width: 45%;
   align-self: center;
-  background-color: aliceblue;
-  border: 1.2px solid black;
-  border-radius: 1.2rem;
-  padding: 1rem 1.2rem;
+  background-color: transparent;
+  border: none;
+  // border-bottom: 1.2px solid black;
+  // border-radius: 1.2rem;
+  padding: 0rem 1.2rem;
   &:hover,
   &:focus {
     transform: scale(1.1);
+    background-color: black;
+    color: white;
+    transition: 1s;
   }
 
 }
 
 textarea {
   padding: 2rem;
-  border-radius: 1.5rem;
+  border-radius: 1rem;
   border: 1.5px solid black;
   resize: none;
 
