--- a/styles/sass/partials/_mediaQs.scss
+++ b/styles/sass/partials/_mediaQs.scss
@@ -37,7 +37,7 @@
 
 @media (max-width: 1000px) {
   .skillsList {
-    width: 70%;
+    width: 80%;
   }
 }
 
@@ -77,7 +77,12 @@
 
   .aboutSummary {
     width: 100%;
+    h3 {
+      text-align: center;
+      padding-top: 2rem;
+    }
   }
+
 
   // .about h3 {
   //   text-align: center;
@@ -91,7 +96,7 @@
   }
 
   .skillsList {
-    width: 90%;
+    width: 100%;
   }
 
   .imgContainer {
