--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -2,7 +2,7 @@
 
 
 header {
-    background: url(../assets/a6Wave-9.1s-1561px.svg);
+    background: url(../../../assets/a6Wave-9.1s-1561px.svg);
     background-repeat: no-repeat;
     background-size: cover;
     // background-position: center;
