--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,14 +1,29 @@
-@use "./variables" as v;
+@use "./variables" as v; 
 
 .contact {
-  display: flex;
-  justify-content: space-between;
-  gap: 2rem;
-  
+  background-image: url(../../../assets/contactImage.svg);
+  background-repeat: no-repeat;
+  background-position: 75% 3rem;
+  background-size: cover;
+  text-shadow: -0.5px -0.5px 1px white;
+  .contactContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+  }
+  .contactTextContainer {
+    width: 45%;
+    position: relative;
+    bottom: 3rem;
+  }
+  .contactForm {
+    width: 50%;
+  }
 }
 
 .contactUL {
-  display: flex; 
+  display: flex;
   li {
     padding: 3rem 3rem 0 0;
     &:hover,
@@ -17,67 +32,58 @@
       transition: 1s;
     }
     i {
-      font-size: 4.5rem;
+      font-size: 4rem;
+      text-align: center;
+      background-color: v.$black;
+      border: 2px solid white;
+      border-radius: 50%;
+      width: 7rem;
+      height: 7rem;
+      padding: 1.5rem;
     }
   }
-}
-
-.contactText {
-  width: 50%;
 }
 
 form {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-
-}
-
-.contactForm {
-  width: 50%;
-}
-
-input {
-  width: 45%;
-  padding: 1rem 1.5rem;
-  background-color: transparent;
-  border: none;
-  border-bottom: 1.2px solid black;
-}
-
-.formFlex {
-  display: flex;
-  justify-content: space-between;
-}
-
-.submit {
-  width: 45%;
-  align-self: center;
-  background-color: transparent;
-  border: none;
-  // border-bottom: 1.2px solid black;
-  // border-radius: 1.2rem;
-  padding: 0rem 1.2rem;
-  &:hover,
-  &:focus {
-    transform: scale(1.1);
-    background-color: black;
-    color: white;
-    transition: 1s;
+  .formFlex {
+    display: flex;
+    justify-content: space-between;
   }
-
-}
-
-textarea {
-  padding: 2rem;
-  border-radius: 1rem;
-  border: 1.5px solid black;
-  resize: none;
-
-}
-
-input::placeholder,
-textarea::placeholder,
-button {
-  text-transform: uppercase;
+  input {
+    width: 45%;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1.2px solid v.$black;
+    padding: 1rem 1.5rem;
+    // ::placeholder {
+    //   text-shadow: 1px 1px white;
+    // }
+  }
+  textarea {
+    border: 1.5px solid v.$black;
+    border-radius: 1rem;
+    resize: none;
+    padding: 2rem;
+  }
+  .submit {  
+    width: 35%;  
+    align-self: center;
+    background-color: rgb(35, 33, 33);
+    border-radius: 10px;
+    border: none;
+    padding: 0.5rem 1.2rem;
+    &:hover,
+    &:focus {
+      transform: scale(1.1);
+      transition: 1s;
+    }
+  }
+  input::placeholder,
+  textarea::placeholder,
+  button {
+    opacity: 1;
+  }
 }
