reformated project section structure. Changed colours for tech stack and links

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -1,65 +1,53 @@
 @use "./variables" as v;
 
+// .portfolio {
+//   border-bottom: 2px solid rgba(172, 103, 255, 0.5);
+// }
+
+
+
 .project {
   display: flex;
-  gap: 5rem;
-  // margin-top: 5rem;
+  align-items: center;
+  margin-bottom: 3rem;
+  gap: 2.5rem;
 }
-
-.project2 {
-  flex-direction: row-reverse;
+.projectTextContainer {
+  width: 45%;
+}
+.projectImg {
+  width: 55%;
+  border: 1px solid rgba(13, 13, 13, 0.5);
+  border-radius: 1rem;
+  img {
+    border-radius: 1rem;
+  }
 }
 
 .projectStack {
-  display: flex;
-  padding: 2rem 0;
+  background: rgba(188, 218, 251, 0.3);
+  border-radius: 1rem;
+  padding: 0.7rem 1rem;
+  color: rgb(0, 105, 217);
+}
 
-  li {
-    padding: 0.5rem 1rem;
+.projectLinks  {
+  a {
+    background: rgb(12, 121, 238);
+    font-size: 1.6rem;
+    border-radius: 1.5rem;
+    color: white;
+    padding: 0.8rem 1.5rem;
+    font-weight: 300;
     margin-right: 1rem;
-    border: 1px solid black;
-    border-radius: 0.5rem;
-  }
-}
-
-.projectDescription {
-width: 45%;
-  .projectLinks a {
-      display: inline-block;
-      font-weight: 600;
-      margin: 1.5rem 3rem 0 0;
+    &:hover,
+    &:focus {
+      background-color: rgb(166, 0, 211);
+      transition: 0.5s;
     }
-}
-
-.projectImage {
-  width: 50%;
-  background-color: rgba(212, 219, 221, 0.5);
-  // background-color: rgba(227, 190, 159, 0.4);
-  img {
-    min-width: 110%;
   }
-
-
 }
 
-.project1 {
-  // background-color: rgba(229, 239, 230, 0.6);
-  padding: 3rem;
-  // border-radius: 3rem;
+.projectSummary {
+  padding: 1rem 0rem 1.5rem 0;
 }
-
-
-.project3 {
-  // background-color: rgba(249, 239, 235, 0.7);
-  padding: 3rem;
-  // border-radius: 3rem;
-}
-
-.project2 {
-  // background-color: rgb(246, 246, 246);
-  padding: 3rem;
-  // border-radius: 3rem;
-}
-
-
-
