refactored and updated code to match new header style and colours. Also removed updated assets and  removed old images

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -1,4 +1,4 @@
-@use "./variables" as v;
+@use "./variables";
 
 .wrapper {
   width: 90%; 
@@ -11,11 +11,6 @@ img {
   display: block;
 }
 
-nav, ul, h1, h2, h3, h4, footer, p, h3 {
-  margin: 0;
-  padding: 0;
-}
-
 li {
   list-style: none;
 }
@@ -25,14 +20,16 @@ a {
   color: inherit;
 }
 
-.about, 
-.portfolio {
-  border-bottom: 1px solid v.$grey;
-  border-top: 1px solid v.$grey;
-  margin: 2rem auto;
+h1, h2, h3, h4, p, ul, footer {
+  margin: 0;
+  padding: 0;
 }
 
-.about, .skills, .portfolio, .contact {
+.about, .skills, .contact, .portfolio {
   padding: 5rem 0;
 }
- 
+
+
+
+
+
