--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,500|Lato:300,400|Poppins:300,400,500,800&display=swap');
+
 // COLOURS 
 
 // Colour variables
-$white: rgb(242, 242, 240);
 $grey: rgba(111, 108, 100, 0.4);
+$black: rgb(18, 17, 17);
 
 // Font families 
-$body: 'Raleway', sans-serif;
-$h1: 'Questrial';
+$poppins: 'Poppins', sans-serif; 
+$raleway: 'Raleway', sans-serif;
 
 // Base font size 
