--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -1,28 +1,24 @@
-@use "./variables" as v;
+@use "./variables" as v; 
 
-
-.flexContainer {
+.about {
+  text-align: right;
+  margin-top: -5vh;
+  // border-bottom: 1px solid v.$grey;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  .aboutText {
+    width: 55%;
+  }
+  .aboutImgContainer {
+    width: 35%;
+    text-align: center;
+    .aboutImg {
+      border-radius: 50%;
+      max-width: 75%;
+      border: 1px solid black;
+      padding: 1rem;
+      display: inline-block;
+    }
+  }
 }
-
-.aboutImage {
-  border-radius: 50%;
-  max-width: 75%;
-  border: 1px solid black;
-  padding: 1rem;
-  display: inline-block;
-}
-
-.aboutSummary {
-  width: 60%;
-}
-.imgContainer {
-  width: 35%;
-  text-align: center;
-}
-
-// .about h3 {
-//   margin-top: 4rem;
-// }
