--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -6,40 +6,62 @@ html {
 
 body, input, textarea, button {
   font-size: 1.8rem;
-  font-family: v.$body;
+  font-family: v.$raleway;
   letter-spacing: 1.5px;
   line-height: 3rem;
+  color: v.$black;
 }
 
-h3, h4, .skills li, .projectLinks, .projectStack li {
+h1, h2, h3, h4, a {
+  font-family: v.$poppins;
+}
+
+h1, h3 {
   text-transform: uppercase;
 }
+
+h1, h2, .headerNav, .contact li, .submit {
+  color: white;
+} 
 
 h1 {
   font-size: 10rem;
-  margin-bottom: 2rem;
-  font-family: v.$h1;
-  line-height: 8rem;
-  letter-spacing: 0.5rem;
-  text-transform: uppercase;
+  font-weight: 800;
+  line-height: 12rem;
+  letter-spacing: 0.4rem;
+  text-shadow: 1px 1px black;
 }
+
 h2 {
   font-size: 5rem;
+  font-weight: 300;
   line-height: 5.5rem;
-  font-family: v.$h1;
+  text-shadow: 0px 1px black;
 }
 
 h3 {
-    font-size: 5rem;
-    margin-bottom: 3rem;
+  font-size: 5rem;
+  font-weight: 400;
+  padding-bottom: 3rem;
 }
 
 h4 {
-  font-size: 3rem;
+  font-size: 3.5rem;
+  font-weight: 400;
+  padding-bottom: 1rem;
+}
+
+.contact h3 {
+  text-shadow: 0.5px 0.5px white;
 }
 
 footer {
+  font-size: 1.4rem;
   text-align: center;
   border-top: 2px solid black;
   padding: 0.5rem;
 }
+
+// margin padding 0
+// list styles
+// text decoration 
