--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500|Lato:300,400|Poppins:300,400,500,800&display=swap");
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
@@ -253,11 +254,6 @@ img {
   display: block;
 }
 
-nav, ul, h1, h2, h3, h4, footer, p, h3 {
-  margin: 0;
-  padding: 0;
-}
-
 li {
   list-style: none;
 }
@@ -267,14 +263,12 @@ a {
   color: inherit;
 }
 
-.about,
-.portfolio {
-  border-bottom: 1px solid rgba(111, 108, 100, 0.4);
-  border-top: 1px solid rgba(111, 108, 100, 0.4);
-  margin: 2rem auto;
+h1, h2, h3, h4, p, ul, footer {
+  margin: 0;
+  padding: 0;
 }
 
-.about, .skills, .portfolio, .contact {
+.about, .skills, .contact, .portfolio {
   padding: 5rem 0;
 }
 
@@ -287,96 +281,112 @@ body, input, textarea, button {
   font-family: "Raleway", sans-serif;
   letter-spacing: 1.5px;
   line-height: 3rem;
+  color: rgb(18, 17, 17);
 }
 
-h3, h4, .skills li, .projectLinks, .projectStack li {
+h1, h2, h3, h4, a {
+  font-family: "Poppins", sans-serif;
+}
+
+h1, h3 {
   text-transform: uppercase;
+}
+
+h1, h2, .headerNav, .contact li, .submit {
+  color: white;
 }
 
 h1 {
   font-size: 10rem;
-  margin-bottom: 2rem;
-  font-family: "Questrial";
-  line-height: 8rem;
-  letter-spacing: 0.5rem;
-  text-transform: uppercase;
+  font-weight: 800;
+  line-height: 12rem;
+  letter-spacing: 0.4rem;
+  text-shadow: 1px 1px black;
 }
 
 h2 {
   font-size: 5rem;
+  font-weight: 300;
   line-height: 5.5rem;
-  font-family: "Questrial";
+  text-shadow: 0px 1px black;
 }
 
 h3 {
   font-size: 5rem;
-  margin-bottom: 3rem;
+  font-weight: 400;
+  padding-bottom: 3rem;
 }
 
 h4 {
-  font-size: 3rem;
+  font-size: 3.5rem;
+  font-weight: 400;
+  padding-bottom: 1rem;
+}
+
+.contact h3 {
+  text-shadow: 0.5px 0.5px white;
 }
 
 footer {
+  font-size: 1.4rem;
   text-align: center;
   border-top: 2px solid black;
   padding: 0.5rem;
 }
 
-nav {
-  position: absolute;
-  top: 5%;
-  right: 5%;
-}
-nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-nav ul li {
-  padding: 2rem;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-nav ul li:hover, nav ul li:focus {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-
 header {
-  background: url(../../../assets/a6Wave-9.1s-1561px.svg);
+  background-image: url(../../../assets/header1.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  color: white;
+  padding: 4rem 0 80rem;
+  height: 105vh;
+}
+header .headerNav ul {
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  gap: 2.5rem;
+}
+header .headerNav i {
+  font-size: 3rem;
+  background-color: rgb(18, 17, 17);
+  border: 3px solid white;
+  border-radius: 50%;
+  padding: 2rem;
+}
+header .headerNav i:hover, header .headerNav i:focus {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+header .headerText {
+  position: relative;
+  top: 15vh;
 }
 
-.flexContainer {
+.about {
+  text-align: right;
+  margin-top: -5vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
-
-.aboutImage {
+.about .aboutText {
+  width: 55%;
+}
+.about .aboutImgContainer {
+  width: 35%;
+  text-align: center;
+}
+.about .aboutImgContainer .aboutImg {
   border-radius: 50%;
   max-width: 75%;
   border: 1px solid black;
@@ -384,128 +394,101 @@ header {
   display: inline-block;
 }
 
-.aboutSummary {
-  width: 60%;
-}
-
-.imgContainer {
-  width: 35%;
-  text-align: center;
-}
-
 .skills {
-  background-image: url("../assets/background1.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.skillsSection {
   text-align: center;
-  background: rgba(255, 255, 255, 0.8);
 }
-
-i {
-  display: block;
+.skills .skillsList {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5rem 2rem;
+  width: 60%;
+  margin: 2rem auto 0;
+}
+.skills .skillsList li {
+  padding: 1rem;
+}
+.skills .skillsList i {
   font-size: 6rem;
+  display: block;
   margin-bottom: 1rem;
-}
-
-.skillsList {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 50%;
-}
-.skillsList li {
-  width: 25%;
-  padding: 2rem;
-}
-.skillsList li:hover, .skillsList li:focus {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(236, 39, 255, 0.8)), to(rgba(75, 200, 255, 0.8)));
-  background-image: linear-gradient(to right, rgba(236, 39, 255, 0.8), rgba(75, 200, 255, 0.8));
-  color: white;
-  border-radius: 10px;
-}
-
-.skillsContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .project {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3rem;
+  gap: 2.5rem;
 }
 
-.project2 {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+.projectTextContainer {
+  width: 45%;
+}
+
+.projectImg {
+  width: 55%;
+  border: 1px solid rgba(13, 13, 13, 0.5);
+  border-radius: 1rem;
+}
+.projectImg img {
+  border-radius: 1rem;
 }
 
 .projectStack {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 2rem 0;
+  background: rgba(188, 218, 251, 0.3);
+  border-radius: 1rem;
+  padding: 0.7rem 1rem;
+  color: rgb(0, 105, 217);
 }
-.projectStack li {
-  padding: 0.5rem 1rem;
+
+.projectLinks a {
+  background: rgb(12, 121, 238);
+  font-size: 1.6rem;
+  border-radius: 1.5rem;
+  color: white;
+  padding: 0.8rem 1.5rem;
+  font-weight: 300;
   margin-right: 1rem;
-  border: 1px solid black;
-  border-radius: 0.5rem;
+}
+.projectLinks a:hover, .projectLinks a:focus {
+  background-color: rgb(166, 0, 211);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
-.projectDescription {
-  width: 45%;
-}
-.projectDescription .projectLinks a {
-  display: inline-block;
-  font-weight: 600;
-  margin: 1.5rem 3rem 0 0;
-}
-
-.projectImage {
-  width: 50%;
-  background-color: rgba(212, 219, 221, 0.5);
-}
-.projectImage img {
-  min-width: 110%;
-}
-
-.project1 {
-  padding: 3rem;
-}
-
-.project3 {
-  padding: 3rem;
-}
-
-.project2 {
-  padding: 3rem;
+.projectSummary {
+  padding: 1rem 0rem 1.5rem 0;
 }
 
 .contact {
+  background-image: url(../../../assets/contactImage.svg);
+  background-repeat: no-repeat;
+  background-position: 75% 3rem;
+  background-size: cover;
+  text-shadow: -0.5px -0.5px 1px white;
+}
+.contact .contactContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 2rem;
+}
+.contact .contactTextContainer {
+  width: 45%;
+  position: relative;
+  bottom: 3rem;
+}
+.contact .contactForm {
+  width: 50%;
 }
 
 .contactUL {
@@ -523,11 +506,14 @@ i {
   transition: 1s;
 }
 .contactUL li i {
-  font-size: 4.5rem;
-}
-
-.contactText {
-  width: 50%;
+  font-size: 4rem;
+  text-align: center;
+  background-color: rgb(18, 17, 17);
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 7rem;
+  height: 7rem;
+  padding: 1.5rem;
 }
 
 form {
@@ -540,20 +526,7 @@ form {
           flex-direction: column;
   gap: 2rem;
 }
-
-.contactForm {
-  width: 50%;
-}
-
-input {
-  width: 45%;
-  padding: 1rem 1.5rem;
-  background-color: transparent;
-  border: none;
-  border-bottom: 1.2px solid black;
-}
-
-.formFlex {
+form .formFlex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -561,51 +534,50 @@ input {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
-.submit {
+form input {
   width: 45%;
-  -ms-flex-item-align: center;
-      align-self: center;
   background-color: transparent;
   border: none;
-  padding: 0rem 1.2rem;
+  border-bottom: 1.2px solid rgb(18, 17, 17);
+  padding: 1rem 1.5rem;
 }
-.submit:hover, .submit:focus {
+form textarea {
+  border: 1.5px solid rgb(18, 17, 17);
+  border-radius: 1rem;
+  resize: none;
+  padding: 2rem;
+}
+form .submit {
+  width: 35%;
+  -ms-flex-item-align: center;
+      align-self: center;
+  background-color: rgb(35, 33, 33);
+  border-radius: 10px;
+  border: none;
+  padding: 0.5rem 1.2rem;
+}
+form .submit:hover, form .submit:focus {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
-  background-color: black;
-  color: white;
   -webkit-transition: 1s;
   transition: 1s;
 }
-
-textarea {
-  padding: 2rem;
-  border-radius: 1rem;
-  border: 1.5px solid black;
-  resize: none;
+form input::-webkit-input-placeholder, form textarea::-webkit-input-placeholder {
+  opacity: 1;
 }
-
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-  text-transform: uppercase;
+form input::-moz-placeholder, form textarea::-moz-placeholder {
+  opacity: 1;
 }
-
-input::-moz-placeholder, textarea::-moz-placeholder {
-  text-transform: uppercase;
+form input:-ms-input-placeholder, form textarea:-ms-input-placeholder {
+  opacity: 1;
 }
-
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  text-transform: uppercase;
+form input::-ms-input-placeholder, form textarea::-ms-input-placeholder {
+  opacity: 1;
 }
-
-input::-ms-input-placeholder, textarea::-ms-input-placeholder {
-  text-transform: uppercase;
-}
-
-input::placeholder,
-textarea::placeholder,
-button {
-  text-transform: uppercase;
+form input::placeholder,
+form textarea::placeholder,
+form button {
+  opacity: 1;
 }
 
 @media (max-width: 1200px) {
