media query adjustments

--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -58,6 +58,7 @@ form {
     border: none;
     border-bottom: 1.2px solid v.$black;
     padding: 1rem 1.5rem;
+    text-shadow: -0.5px -0.5px 1px white;
     // ::placeholder {
     //   text-shadow: 1px 1px white;
     // }
