--- a/styles/sass/partials/_skills.scss
+++ b/styles/sass/partials/_skills.scss
@@ -2,6 +2,7 @@
 
 .skills {
   text-align: center;
+  padding-bottom: 7rem;
   .skillsList {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -10,15 +11,6 @@
     margin: 2rem auto 0;
     li {
       padding: 1rem;
-      // &:hover,
-      // &:focus {
-      //   color: white;
-      //   background: linear-gradient(to right, rgb(249, 97, 254), rgb(74, 204, 255));
-      //   border-radius: 50%;
-      //   padding: 2rem 2rem;
-      //   border: 1px solid v.$black;
-      //   text-shadow: 0.5px 0.5px black;
-      // }
     }
     i {
       font-size: 6rem;
