--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -9,4 +9,6 @@
 @use "./partials/projects";
 @use "./partials/contact";
 
-@use "./partials/mediaQs";
+// @use "./partials/mediaQs";
+
+@use "./partials/mediaQ";
