--- a/styles/styles.css
+++ b/styles/styles.css
@@ -288,7 +288,7 @@ h1, h2, h3, h4, a {
   font-family: "Poppins", sans-serif;
 }
 
-h1, h3 {
+.h1Name, h3 {
   text-transform: uppercase;
 }
 
@@ -368,7 +368,7 @@ header .headerText {
 
 .about {
   text-align: right;
-  margin-top: -5vh;
+  margin-top: -7vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -396,6 +396,7 @@ header .headerText {
 
 .skills {
   text-align: center;
+  padding-bottom: 7rem;
 }
 .skills .skillsList {
   display: grid;
@@ -413,6 +414,11 @@ header .headerText {
   margin-bottom: 1rem;
 }
 
+.portfolio h3 {
+  text-align: center;
+  padding-bottom: 5rem;
+}
+
 .project {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -420,7 +426,7 @@ header .headerText {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
   gap: 2.5rem;
 }
 
@@ -540,6 +546,7 @@ form input {
   border: none;
   border-bottom: 1.2px solid rgb(18, 17, 17);
   padding: 1rem 1.5rem;
+  text-shadow: -0.5px -0.5px 1px white;
 }
 form textarea {
   border: 1.5px solid rgb(18, 17, 17);
@@ -580,18 +587,31 @@ form button {
   opacity: 1;
 }
 
-@media (max-width: 1200px) {
-  .aboutImage {
-    min-width: 90%;
+@media (max-width: 1220px) {
+  form .submit {
+    width: 40%;
+  }
+  .about {
+    padding-bottom: 7rem;
+  }
+  .about .aboutImgContainer {
+    width: 40%;
+  }
+  .about .aboutText {
+    width: 60%;
   }
 }
-@media (max-width: 1100px) {
-  .aboutSummary {
-    width: 55%;
+@media (max-width: 1070px) {
+  h1 {
+    font-size: 9rem;
+    letter-spacing: 0.35rem;
+    line-height: 11rem;
   }
-  .imgContainer {
-    width: 40%;
-    text-align: center;
+  h2 {
+    font-size: 4.5rem;
+  }
+  .skills .skillsList {
+    width: 75%;
   }
   .project {
     -ms-flex-wrap: wrap;
@@ -599,116 +619,226 @@ form button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    border: 2px solid rgb(121, 121, 121);
+    padding: 4rem 1rem;
+    border-radius: 4rem;
   }
-  .projectDescription {
-    width: 100%;
+  .project .projectTextContainer {
+    width: 92%;
+  }
+  .project .projectImg {
+    width: 92%;
+  }
+  .contact .contactContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact .contactContainer .contactTextContainer {
+    width: 90%;
     text-align: center;
   }
-  .projectStack {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .projectImage {
-    width: 60%;
-  }
-}
-@media (max-width: 1000px) {
-  .skillsList {
-    width: 80%;
-  }
-}
-@media (max-width: 930px) {
-  h2 {
-    font-size: 3.8rem;
-  }
-}
-@media (max-width: 850px) {
-  .contact {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 3rem;
-  }
-  .contact h3 {
-    text-align: center;
-  }
-  .contactText,
-.contactForm {
-    width: 100%;
+  .contact .contactContainer .contactForm {
+    width: 90%;
   }
   .contactUL {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .flexContainer {
-    -ms-flex-wrap: wrap-reverse;
-        flex-wrap: wrap-reverse;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .aboutImage {
-    width: 50%;
-    margin-bottom: 1rem;
-  }
-  .aboutSummary {
-    width: 100%;
-  }
-  .aboutSummary h3 {
-    text-align: center;
-    padding-top: 2rem;
-  }
 }
-@media (max-width: 700px) {
-  .projectImage {
-    width: 80%;
+@media (max-width: 1020px) {
+  .about {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
-  .skillsList {
+  .about h3 {
+    padding-top: 4rem;
+  }
+  .about .aboutText {
     width: 100%;
-  }
-  .imgContainer {
-    width: 50%;
     text-align: center;
   }
-}
-@media (max-width: 600px) {
-  .projectImage {
-    width: 100%;
+  .about .aboutImgContainer {
+    width: 50%;
   }
 }
-@media (max-width: 500px) {
-  .skillsList li {
-    font-size: 1.4rem;
+@media (max-width: 915px) {
+  header .headerText {
+    top: 15vh;
+  }
+  header h1 {
+    font-size: 8rem;
+    line-height: 10rem;
+  }
+  header h2 {
+    font-size: 3.7rem;
+  }
+  header .headerNav i {
+    font-size: 2.5rem;
+    padding: 1.8rem;
+  }
+}
+@media (max-width: 820px) {
+  body, input, textarea, button {
+    font-size: 1.6rem;
+  }
+  header .headerText {
+    top: 19vh;
+  }
+  header h1 {
+    font-size: 7rem;
+    line-height: 8rem;
+  }
+  header h2 {
+    font-size: 3.5rem;
+  }
+  header .headerNav i {
+    font-size: 2.3rem;
+    padding: 1.6rem;
   }
   h3 {
     font-size: 4.5rem;
-    line-height: 5rem;
   }
-  nav {
-    font-size: 1.2rem;
+  h4 {
+    font-size: 3rem;
   }
-  h1 {
+  .skills .skillsList {
+    width: 85%;
+  }
+  .contact li {
+    padding: 3rem 2rem 0 0;
+  }
+  .contact .contactUL i {
+    font-size: 3rem;
+    width: 6.2rem;
+    height: 6.2rem;
+    padding: 1rem;
+    line-height: 4rem;
+  }
+}
+@media (max-width: 720px) {
+  body, input, textarea, button, .projectLinks a {
+    font-size: 1.5rem;
+  }
+  header {
+    height: 105vh;
+    padding: 4rem 0 50rem;
+  }
+  header h1 {
     font-size: 5.5rem;
-    line-height: 6.5rem;
+    line-height: 7rem;
   }
-  h2 {
+  header h2 {
+    font-size: 2.8rem;
+  }
+  header .headerNav i {
     font-size: 2rem;
+    padding: 1.3rem;
+  }
+  header .headerText {
+    top: 22vh;
+  }
+  h3 {
+    font-size: 3.5rem;
+    padding-bottom: 2.5rem;
+  }
+  h4 {
+    font-size: 2.5rem;
+  }
+  .about h3 {
+    padding-top: 3rem;
+  }
+  .skills {
+    padding: 5rem 0;
+  }
+  .skills .skillsList i {
+    font-size: 5rem;
+  }
+  .project {
+    padding: 2.5rem 1rem 3rem;
+  }
+}
+@media (max-width: 580px) {
+  body, input, textarea, button {
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+  }
+  .projectLinks a {
+    font-size: 1.3rem;
+  }
+  header {
+    background-position: 35%;
+    height: 100vh;
+    padding: 4rem 0 0rem;
+  }
+  header h1 {
+    font-size: 4.5rem;
+    line-height: 5.5rem;
+  }
+  header h2 {
+    font-size: 2.2rem;
+    line-height: 3.5rem;
+  }
+  header .headerNav ul {
+    gap: 1.6rem;
+  }
+  header .headerNav i {
+    font-size: 1.8rem;
+    padding: 1.1rem;
+    border-width: 2px;
+  }
+  header .headerText {
+    top: 18vh;
+  }
+  h3 {
+    font-size: 3rem;
+  }
+  h4 {
+    font-size: 2.1rem;
+  }
+  .about h3 {
+    padding: 2rem;
+  }
+  .about .aboutImgContainer {
+    width: 60%;
+  }
+  .skills {
+    padding: 3.5rem 0;
+  }
+  .skills h3 {
+    padding-bottom: 1rem;
+  }
+  .skills .skillsList {
+    gap: 3rem 2rem;
+  }
+  .portfolio h3 {
+    padding-bottom: 2.5rem;
+  }
+  .project {
+    margin-bottom: 2.5rem;
+    border-width: 1.5px;
+  }
+  .contact h3 {
+    padding-bottom: 2rem;
+  }
+  .contact li {
+    padding: 2rem 2rem 0 0;
+  }
+  .contact .contactUL i {
+    font-size: 2.5rem;
+    width: 5.2rem;
+    height: 5.2rem;
+    padding: 0.9rem;
     line-height: 3rem;
   }
-  .contact {
-    text-align: center;
+  .contact .contactTextContainer {
+    bottom: 1.5rem;
   }
-  button {
-    color: black;
-  }
-  .projectLinks {
-    font-size: 1.4rem;
-  }
-  .projectStack li {
-    font-size: 1.4rem;
-  }
-  .headerText {
-    margin-top: 5rem;
+  form .submit {
+    width: 50%;
   }
 }
