--- a/styles/styles.css
+++ b/styles/styles.css
@@ -771,9 +771,8 @@ form button {
     font-size: 1.3rem;
   }
   header {
-    background-position: 35%;
-    height: 100vh;
-    padding: 4rem 0 0rem;
+    background-position: 30%;
+    height: 70vh;
   }
   header h1 {
     font-size: 4.5rem;
@@ -792,19 +791,18 @@ form button {
     border-width: 2px;
   }
   header .headerText {
-    top: 0vh;
-    padding-bottom: 1.5rem;
+    top: 8vh;
+    padding-top: 3rem;
   }
   .headerContainer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     position: relative;
-    top: 20vh;
   }
   h3 {
     font-size: 3rem;
@@ -964,7 +962,7 @@ form button {
   header h1 {
     font-size: 3.3rem;
   }
-  projectStack {
+  .projectStack {
     padding: 0.4rem 1rem;
   }
   .projectLinks a {
